--- a/KrausxRGA/UI/wndAppSetting.xaml
+++ b/KrausxRGA/UI/wndAppSetting.xaml
@@ -1,19 +1,19 @@
 ﻿<Window x:Class="KrausRGA.UI.wndAppSetting"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Application Setting" Height="1200" Width="800" WindowState="Maximized" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
+        Title="Application Setting" Height="1200" Width="800" WindowState="Maximized" Loaded="Window_Loaded" >
     <Viewbox>
-    <Grid Margin="0,3,2,5" Height="321">
+        <Grid Margin="0,3,2,5" Height="1200" Width="798">
         <Grid.Background>
             <ImageBrush ImageSource="/KrausRGA;component/Images/white.jpg"/>
         </Grid.Background>
 
         <Border CornerRadius="10" Canvas.Top="10" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" Margin="4,0,10,0" >
-            <Canvas Margin="0,0,-2,0" Background="#33000000">
-                <Border Height="52" Background="#B2111111" Width="666" CornerRadius="5">
+            <Canvas Margin="0,0,-14,0" Background="#33000000">
+                <Border Height="52" Background="#B2111111" Width="784" CornerRadius="5">
                     <TextBlock TextWrapping="Wrap" Text="Application Font Size Setting" FontSize="30" Foreground="White" Margin="10,6,242,0"/>
                 </Border>
-                <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="324" Height="52" Width="174" Canvas.Left="-3" >
+                <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="356" Height="52" Width="174" Canvas.Left="8" >
                     <StackPanel Orientation="Horizontal" Margin="0,-1,0,1">
                         <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnlogout_Click" Width="52"></Image>
                         <Button x:Name="btnlogout" Style="{StaticResource ToolBarButtonBaseStyle}" Content="OK" Margin="-1,-2,-1,-1" Click="btnlogout_Click" Width="103"/>
