--- a/KrausxRGA/UI/wndNewRMANumber.xaml
+++ b/KrausxRGA/UI/wndNewRMANumber.xaml
@@ -4,6 +4,7 @@
         Title="New RMA Number" Height="1280"  Icon="/KrausRGA;component/Images/RGAICO.ico"  Width="800" Loaded="Window_Loaded_1" WindowState="Maximized">
     <Viewbox>
         <Grid Height="1280" Width="800">
+            <TextBox HorizontalAlignment="Left" Height="38" Margin="365,463,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="210" x:Name="txtbarcode" KeyDown="txtbarcode_KeyDown_1"/>
             <Border BorderThickness="2" BorderBrush="#FFD49919">
                 <Canvas Margin="1,2,-1,-2" Background="#FFC7C7C7" >
                     <Canvas x:Name="cvMainArea" Height="551" Width="800" Canvas.Left="5">
@@ -141,6 +142,27 @@
                                         </DataGrid.Resources>
 
                                         <DataGrid.Columns>
+                                            <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}"   Header="Item" Width="82" >
+                                                <DataGridTemplateColumn.CellTemplate>
+                                                    <DataTemplate >
+                                                        <Canvas x:Name="cvButtons" Background="White">
+                                                            <Button x:Name="btnRed" Width="80" Height="60" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="btnRed_Click" Style="{StaticResource ImageButton}">
+                                                                <Button.Background>
+                                                                    <ImageBrush Stretch="Fill" ImageSource="/KrausRGA;component/Images/Unchecked .png"/>
+                                                                </Button.Background>
+                                                            </Button>
+                                                            <Button x:Name="btnGreen" Visibility="Hidden" Width="80" Height="60"  BorderBrush="{x:Null}" Foreground="{x:Null}" Style="{StaticResource ImageButton}"
+        														Click="btnGreen_Click" >
+                                                                <Button.Background>
+                                                                    <ImageBrush Stretch="Fill" ImageSource="/KrausRGA;component/Images/Checked .png"/>
+                                                                </Button.Background>
+                                                            </Button>
+                                                        </Canvas>
+                                                    </DataTemplate>
+                                                </DataGridTemplateColumn.CellTemplate>
+                                            </DataGridTemplateColumn>
+
+
                                             <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
                                         		Header="SKU"  
                                         		Width="120" 
@@ -183,7 +205,7 @@
 
                                             <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}"
                                         		Header="Images" 
-                                        		Width="200" >
+                                        		Width="170" >
                                                 <DataGridTemplateColumn.CellTemplate>
                                                     <DataTemplate >
                                                         <ScrollViewer x:Name="svScrollImages" Width="250" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto" CanContentScroll="True" Height="60">
@@ -197,7 +219,7 @@
 
                                             <DataGridTemplateColumn Header="Reasons" 
                                         		HeaderStyle="{StaticResource HeaderStyleKey}"
-                                        		Width="180" >
+                                        		Width="160" >
                                                 <DataGridTemplateColumn.CellTemplate>
                                                     <DataTemplate>
                                                         <ContentControl x:Name="cntItemStatus" MouseLeftButtonDown="cntItemStatus_MouseLeftButtonDown">
@@ -305,7 +327,37 @@
                             <Border>
                                 <Canvas Height="471">
                                     <Border Width="790" CornerRadius="10" Canvas.Top="2" BorderBrush="#FF787878" BorderThickness="2,0,2,2" Height="241" >
-                                        <Canvas x:Name="cvCheckboxHolder" Margin="-10,0,10,0">
+                                        <Canvas Margin="-10,0,10,0" Name="CanvasConditions" IsEnabled="False">
+                                        <Label Name="lblpoints" Height="39" Width="105" Canvas.Left="656" Canvas.Top="75"></Label>
+
+                                        <Canvas>
+                                            <Label Canvas.Left="141" Canvas.Top="28" Name="lblItemIsNew" Content="Item is New" Style="{StaticResource lblConstant}" Width="167" Height="32" FontSize="20" ></Label>
+                                            <RadioButton Content="Yes" Name="btnBoxNew" Canvas.Left="340" Canvas.Top="29" Height="29" Width="58" FontSize="20" Checked="btnBoxNew_Checked_1"></RadioButton>
+                                            <RadioButton Content="No" Name="btnBoxNotNew" Canvas.Left="480" Canvas.Top="29" Height="29" Width="104" FontSize="20" Checked="btnBoxNotNew_Checked_1"></RadioButton>
+                                        </Canvas>
+                                        <Canvas>
+                                            <Label Canvas.Left="143" Canvas.Top="186" Name="lblDefectontea" Content="Defect in Transite" Style="{StaticResource lblConstant}" Width="167" Height="32" FontSize="20" ></Label>
+                                            <RadioButton Content="Yes" Name="btntransiteYes" Canvas.Left="336" Canvas.Top="188" Height="29" Width="84" FontSize="20" Checked="btntransiteYes_Checked_1" IsEnabled="False"></RadioButton>
+                                            <RadioButton Content="No" Canvas.Left="476" Name="btntransiteNo" Canvas.Top="188" Height="29" Width="104" FontSize="20" Checked="btntransiteNo_Checked" IsEnabled="False" ></RadioButton>
+                                        </Canvas>
+                                        <Canvas>
+                                            <Label Canvas.Left="152" Name="lblInstalled" Canvas.Top="70" Content="Installed" Style="{StaticResource lblConstant}" Width="152" Height="32" FontSize="20" ></Label>
+                                            <RadioButton Content="Yes" Canvas.Left="338" Canvas.Top="72" Name="btnInstalledYes" Height="29" Width="84" FontSize="20" Checked="btnInstalledYes_Checked_1"></RadioButton>
+                                            <RadioButton Content="No" Canvas.Left="477" Canvas.Top="73" Name="btnInstalledNo" Height="29" Width="84" FontSize="20" Checked="btnInstalledNo_Checked_1" ></RadioButton>
+                                        </Canvas>
+                                        <Canvas>
+                                            <Label Canvas.Left="30" Name="lblStatus" Canvas.Top="112" Content="Chip/Bended/Scratch/Broken" Style="{StaticResource lblConstant}" Width="281" Height="32" FontSize="20" ></Label>
+                                            <RadioButton Content="Yes"  Canvas.Left="337" Canvas.Top="113" Name="btnStatusYes" Height="29" Width="84" FontSize="20" Checked="btnStatusYes_Checked" ></RadioButton>
+                                            <RadioButton Content="No"  Canvas.Left="477" Canvas.Top="113" Name="btnStatusNo" Height="29" Width="84" FontSize="20" Checked="btnStatusNo_Checked"></RadioButton>
+                                        </Canvas>
+                                        <Canvas>
+                                            <Label Canvas.Left="34" Canvas.Top="149" Name="lblManufacturer" Content="Manufacturer Defective" Style="{StaticResource lblConstant}" Width="281" Height="32" FontSize="20" ></Label>
+                                            <RadioButton Content="Yes" Canvas.Left="336" IsEnabled="False" Canvas.Top="153" Name="btnManufacturerYes" Height="29" Width="84" FontSize="20" Checked="btnManufacturerYes_Checked"></RadioButton>
+                                            <RadioButton Content="No" Canvas.Left="477" Canvas.Top="152" IsEnabled="False" Name="btnManufacturerNo" Height="29" Width="84" FontSize="20" Checked="btnManufacturerNo_Checked"></RadioButton>
+                                        </Canvas>
+                                            <Button Content="Done" Name="btnAdd" Canvas.Left="656" Canvas.Top="183" Width="120" Height="38" FontSize="20" Click="btnAdd_Click"></Button>
+                                </Canvas>
+                                <!--<Canvas x:Name="cvCheckboxHolder" Margin="-10,0,10,0">
                                             <Border Height="45" Width="789" Background="#B2111111" Canvas.Top="1" Canvas.Left="8">
                                                 <TextBlock TextWrapping="Wrap" Text="Reason(s) for Return" FontSize="25" Foreground="White" Margin="10,6,236,0"/>
                                             </Border>
@@ -402,7 +454,7 @@
                                                     </Border>
                                                 </ContentControl>
                                             </Border>
-                                        </Canvas>
+                                        </Canvas>-->
                                     </Border>
 
                                     <Border Width="791" CornerRadius="10" Canvas.Top="244" BorderBrush="#FF787878" BorderThickness="2,0,2,2" Height="144" Canvas.Left="-1" >
